shim-server-ui components precompiled
bower and grunt are precompiled on PC
only gradle downloads components
gradle distro accessed locally

	modified:   DockerfileRpi
	new file:   gradle-2.12-bin.zip
	modified:   gradle/wrapper/gradle-wrapper.properties
	modified:   shim-server-ui/.gitignore
	new file:   shim-server-ui/docker/assets/.htaccess
	new file:   shim-server-ui/docker/assets/404.html
	new file:   shim-server-ui/docker/assets/favicon.ico
	new file:   shim-server-ui/docker/assets/fonts/glyphicons-halflings-regular.eot
	new file:   shim-server-ui/docker/assets/fonts/glyphicons-halflings-regular.svg
	new file:   shim-server-ui/docker/assets/fonts/glyphicons-halflings-regular.ttf
	new file:   shim-server-ui/docker/assets/fonts/glyphicons-halflings-regular.woff
	new file:   shim-server-ui/docker/assets/images/0e4c3623.omh_logo-monochromatic.png
	new file:   shim-server-ui/docker/assets/images/124cbfa8.yeoman.png
	new file:   shim-server-ui/docker/assets/images/3c26aca6.spinner.gif
	new file:   shim-server-ui/docker/assets/index.html
	new file:   shim-server-ui/docker/assets/robots.txt
	new file:   shim-server-ui/docker/assets/scripts/78b4c309.scripts.js
	new file:   shim-server-ui/docker/assets/scripts/ff1e0a54.vendor.js
	new file:   shim-server-ui/docker/assets/styles/4f18647c.main.css
	new file:   shim-server-ui/docker/assets/styles/c260b4dd.vendor.css
	new file:   shim-server-ui/docker/assets/views/authorizationComplete.html
	new file:   shim-server-ui/docker/assets/views/main.html

--- a/DockerfileRpi
+++ b/DockerfileRpi
@@ -11,5 +11,20 @@ WORKDIR /shimmer-app
 # Bundle app source
 COPY . /shimmer-app
 
+#Compilation is better done on a PC. Currently on Rpi2 Grunt fails with a Out of Memory error
+#Run these commands on a PC to generate "shim-server-ui/docker/assets"
+#RUN cd shim-server-ui && \
+#	npm install -g grunt-cli && \
+#	npm install -g bower && \
+#	bower --allow-root install && \		
+#	grunt build && \
+#	cd .. 
+
+RUN ln -sf /shimmer-app/shim-server-ui/docker/assets /shimmer-app/shim-server/src/main/resources/public
+
 EXPOSE 8083
-CMD [ "./run-natively.sh" ]
+
+CMD ["bash", "-c" , "./gradlew shim-server:bootRun"] 
+#CMD ["bash", "-c" , "while true; do sleep 5; done"]; 
+##  
+#CMD [ "./run-natively.sh" ]
