--- a/shim-server/src/main/resources/application.yaml
+++ b/shim-server/src/main/resources/application.yaml
@@ -18,7 +18,9 @@ logging:
 openmhealth:
   shim:
     server:
-      callbackUrlBase: http://${AGILE_HOST}:8083
+       callbackUrlBase:${AGILE_HOST}
+
+#      callbackUrlBase: http://${AGILE_HOST}:8083
 
     #NOTE: Uncomment and fill in the clientId/clientSecret with your credentials if you're not using the UI
     #NOTE: Uncomment and set partnerAccess to true if your credentials for a given API have partner access
